<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovoAnuncioActivity">

    <TextView
        android:id="@+id/novoAnuncioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="285dp"
        android:text="@string/novo_an_ncio"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nomeNovoAnuncioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="179dp"
        android:ems="10"
        android:hint="@string/nome_novo_anuncio"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/novoAnuncioTextView"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/telefoneNovoAnuncioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="179dp"
        android:ems="10"
        android:hint="@string/telefone_novo_anuncio"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeNovoAnuncioTextView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/ramoAtividadeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="177dp"
        android:ems="10"
        android:hint="@string/ramo_da_atividade"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefoneNovoAnuncioTextView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/corpoAnuncioEditText"
        android:layout_width="351dp"
        android:layout_height="137dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/insira_seu_an_ncio"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ramoAtividadeTextView"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/anunciarNovoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="73dp"
        android:text="@string/anunciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corpoAnuncioEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>